testing/framework/resources/Advanced/Failing/mondrian/query5704.e
Gourmet Supermarket	32181
Deluxe Supermarket	99290
HeadQuarters	\N
Mid-Size Grocery	80264
Supermarket	134029
Small Grocery	52604
